# demo-repository

./: README.md  pyproject.toml
.github/: CODEOWNER  CODEOWNERS
.github/workflows/: auto-assign-codeowners.yml  auto-assign.yml  ci.yml  devsecops.yml
js/: example2.js  example4.js
prova/: hello.py
prova sicurezza/: main.py  requirements.txt
prova sicurezza/kubernetes/: deployment.yaml
prova sicurezza/terraform/: main.tf
prova_sicurezza/: main.py  requirements.txt
prova_sicurezza/terraform/: main.tf
python/: main.py  python.txt
