[tool.poetry]
name = "my-ml-project"
version = "0.1.0"
description = "A machine learning project example using PyPoetry."
authors = [
    "Your Name <you@example.com>",
    "Another Author <another@example.com>",
    "Third Author <third@example.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.10"


[tool.poetry.dev-dependencies]
pytest = "^7.1"          # Testing framework
coverage = "^6.5"       # Coverage measurement
black = "^22.3"         # Code formatter
ruff = "^0.0.263"       # Linter
mypy = "^0.971"         # Static type checker
flake8 = "^4.0"         # PEP8 compliance checker
